# advent-of-code

./: .gitignore  Cargo.toml  rust-toolchain.toml
2018/day1/: Cargo.toml
2018/day1/part_1/: Cargo.toml
2018/day1/src/: main.rs
2018/day2/: Cargo.toml
2018/day2/src/: main.rs
2018/day3/: Cargo.toml
2018/day4/: Cargo.toml
2018/day5/: Cargo.toml
2018/day5/src/: main.rs  test.py
2018/day6/: Cargo.toml
2018/day6/src/: main.rs
2018/day7/: Cargo.toml
2019/day01/: Cargo.toml
2019/day01/src/: main.rs
2019/day02/src/: main.rs
2019/day03/: Cargo.toml
2019/day03/src/: main.rs
2019/day04/: Cargo.toml
2019/day04/src/: main.rs
2019/day05/: Cargo.toml
2019/day05/src/: main.rs
2020/day01/: Cargo.toml
2020/day01/src/: main.rs
2020/day02/: Cargo.toml
2020/day02/src/: main.rs
2020/day03/: Cargo.toml
2020/day03/src/: main.rs
2020/day04/: Cargo.toml
2020/day04/src/: main.rs
2020/day04a/src/: main.rs  units.rs
2020/day04b/: Cargo.toml
2020/day05a/: Cargo.toml
2020/day05a/src/: main.rs
2023/day01/: Cargo.toml
2023/day01/src/: main.rs
2023/day02/: Cargo.toml
2023/day02/src/: main.rs
2023/day03/: Cargo.toml
2023/day03/src/: main.rs
2023/day04/: Cargo.toml
2023/day04/src/: main.rs
2023/day05/: Cargo.toml
2023/day05/src/: main.rs
2023/day06/: Cargo.toml
2023/day07/: Cargo.toml
2023/day08/: Cargo.toml
2023/day09/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs  ok_iterator.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day7/src/: main.rs
(+8 files in other folders)
